// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create an view history navigation component 1`] = `
<button
  aria-label="view-forward.title"
  class="chakra-button chakra-tooltip__trigger tool-button view view-forward tool-button--disabled css-19gwppe"
  data-part="trigger"
  data-scope="tooltip"
  data-state="closed"
  data-testid="navi-history-for"
  dir="ltr"
  disabled=""
  id="tooltip:«r1»:trigger"
  type="button"
>
  <svg
    aria-hidden="true"
    class="chakra-icon css-1qiwd9j"
    fill="none"
    focusable="false"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="15 14 20 9 15 4"
    />
    <path
      d="M4 20v-7a4 4 0 0 1 4-4h12"
    />
  </svg>
</button>
`;

exports[`should successfully create an view history navigation component 2`] = `
<button
  aria-label="view-backward.title"
  class="chakra-button chakra-tooltip__trigger tool-button view view-backward tool-button--disabled css-19gwppe"
  data-part="trigger"
  data-scope="tooltip"
  data-state="closed"
  data-testid="navi-history-back"
  dir="ltr"
  disabled=""
  id="tooltip:«r0»:trigger"
  type="button"
>
  <svg
    aria-hidden="true"
    class="chakra-icon css-1qiwd9j"
    fill="none"
    focusable="false"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="9 14 4 9 9 4"
    />
    <path
      d="M20 20v-7a4 4 0 0 0-4-4H4"
    />
  </svg>
</button>
`;
